--- a/index.html
+++ b/index.html
@@ -3,33 +3,50 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
-    <title>BROKS</title>
+    <title>BROKS | UNAPOLOGETICALLY BOLD</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-      /* Reset and base font settings to ensure system-ui looks premium */
+      /* Brutalist Font Stack */
       body {
         margin: 0;
         padding: 0;
-        font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-        -webkit-font-smoothing: antialiased;
-        -moz-osx-font-smoothing: grayscale;
-        background-color: #0B0D10;
+        font-family: 'Inter', system-ui, -apple-system, sans-serif;
+        background-color: #000000;
+        color: #ffffff;
         overflow-x: hidden;
       }
 
-      /* Custom scrollbar to match the theme */
-      ::-webkit-scrollbar {
-        width: 8px;
+      /* Marquee Animation */
+      @keyframes marquee {
+        0% { transform: translateX(0); }
+        100% { transform: translateX(-50%); }
       }
-      ::-webkit-scrollbar-track {
-        background: #0B0D10;
+      .animate-marquee {
+        animation: marquee 20s linear infinite;
       }
-      ::-webkit-scrollbar-thumb {
-        background: #2A2E36;
-        border-radius: 4px;
+
+      /* Float Animation for 3D objects */
+      @keyframes float {
+        0%, 100% { transform: translateY(0) rotate(0deg); }
+        50% { transform: translateY(-20px) rotate(5deg); }
       }
-      ::-webkit-scrollbar-thumb:hover {
-        background: #424654;
+      @keyframes float-reverse {
+        0%, 100% { transform: translateY(0) rotate(0deg); }
+        50% { transform: translateY(20px) rotate(-5deg); }
+      }
+      .animate-float { animation: float 6s ease-in-out infinite; }
+      .animate-float-fast { animation: float 4s ease-in-out infinite; }
+      .animate-float-reverse { animation: float-reverse 7s ease-in-out infinite; }
+
+      /* Custom Scrollbar */
+      ::-webkit-scrollbar { width: 10px; }
+      ::-webkit-scrollbar-track { background: #000; }
+      ::-webkit-scrollbar-thumb { background: #333; }
+      ::-webkit-scrollbar-thumb:hover { background: #fff; }
+      
+      .text-stroke {
+        -webkit-text-stroke: 1px rgba(255,255,255,0.2);
+        color: transparent;
       }
     </style>
   <script type="importmap">
